# whysynth

./: Doxyfile  configure.ac
src/: Makefile.am  common_data.h  dssp_event.c  dssp_event.h  dssp_synth.c  gtkknob.c  gui_callbacks.c  gui_callbacks.h  gui_data.c  gui_interface.c  gui_interface.h  gui_main.c  gui_main.h  manifest.ttl  uris.h  whysynth.h  whysynth.ttl  whysynth_ports.c  whysynth_ports.h
